# robotx_ros2_ws

./: .gitignore  README.md  wamv.urdf  wamv_target.urdf
ArucoLab/: test.py  test2.py
dev_ws/install/: local_setup.sh  setup.sh
dev_ws/log/: latest_build
dev_ws/src/robotx/: package.xml  setup.cfg  setup.py
dev_ws/src/robotx/action/: DroneOperation.action
dev_ws/src/robotx/launch/: launch_mission_unmoving_landing.launch.py
dev_ws/src/robotx/msg/: MissionState.msg
dev_ws/src/robotx/robotx/: backup_drone_node.py  drone_node.py  search_and_report.py  unmoving_landing.py
dev_ws/src/unstatic/: package.xml  setup.cfg  setup.py
dev_ws/src/unstatic/launch/: unstatic_mission.launch.py
dev_ws/src/unstatic/unstatic/: camera_unstatic.py  (+2 more)
gz_ws/: mav.parm  mav.tlog  mav.tlog.raw
gz_ws/src/: mav.parm  mav.tlog  mav.tlog.raw
robotx_gazebo/models/camera/: model.sdf
robotx_gazebo/models/gimbal_small_2d/: model.sdf
robotx_gazebo/models/gimbal_small_2d_edit/: model.sdf
robotx_gazebo/models/iris_with_ardupilot/: model.sdf
robotx_gazebo/plugins/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  MoveInCirclePlugin.cpp  cmake_install.cmake
robotx_gazebo/plugins/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
robotx_gazebo/worlds/: 2022_qualifying_task.world  2022_qualifying_task_aruco.world  2_arucos.world  3_arucos.world  aruco_landing.world  unstatic_landing.world
script_lab/: .gitignore  ShapeDetection.py  april_detection_test.py  aruco_all_test.py  aruco_detection_test.py
simulations/: test-1.py  test-2.py  test-3.py
simulations/results/: data_processing.py  flight_data.json  plot_vertical_control.py
(+10 files in other folders)
